--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #b2b6c4 0%, #af78e7 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
